--- a/project1NC/index.html
+++ b/project1NC/index.html
@@ -18,9 +18,15 @@
       />
       <button>Log in</button>
     </form>
+
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter" required />
+      <input
+        id="todo_write"
+        type="text"
+        placeholder="Write a To Do and Press Enter"
+        required
+      />
     </form>
     <ul id="todo-list"></ul>
     <div id="quote">
@@ -36,7 +42,7 @@
     <script src="js/quote.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
-    <script type="module" src="js/weathers.js"></script>
+    <script src="js/weathers.js"></script>
     <script type="module" src="js/config.js"></script>
   </body>
 </html>
