--- a/school/index.html
+++ b/school/index.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>상품소개페이지</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>test</title>
   </head>
   <body>
-    <h1>레드향
-        레드향 샐러드 레시피
-        상품 구성
-  </body>
+    <div id="container">
+      <header>
+        <h1>사이트제목</h1>
+
+      </header>
+      <aside>
+        <h2>사이드바</h2>
+      </aside>
+      <section id="contents">
+
+        <h2>본문</h2>
+      </section>
+      <footer id="footer">
+
+        <h2>푸터</h2>
+      </footer>
+    </body>
+  </div>
 </html>
