--- a/AIoT/index.html
+++ b/AIoT/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="main.js"></script>
-</head>
-<body>
-    
-</body>
+<html>
+  <body>
+    <div id="app">
+      <script type="text/javascript">
+        const app = document.getElementById("app");
+
+        const header = document.createElement("h1");
+
+        const text = "Develop. Preview. Ship.";
+        const headerContent = document.createTextNode(text);
+
+        header.appendChild(headerContent);
+
+        app.appendChild(header);
+      </script>
+    </div>
+  </body>
 </html>
